tests/baselines/reference/exportDefaultTypeAnnoation3.errors.txt
tests/cases/compiler/reference1.ts(2,5): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/compiler/reference2.ts(2,5): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/mod.d.ts (0 errors) ====
    
    declare module "mod" {
        export default : number;
    }
    
==== tests/cases/compiler/reference1.ts (1 errors) ====
    import d from "mod";
    var s: string = d; // Error
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    
==== tests/cases/compiler/reference2.ts (1 errors) ====
    import { default as d } from "mod";
    var s: string = d; // Error
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.